完成弹出框

--- a/src/style/commons.less
+++ b/src/style/commons.less
@@ -5,6 +5,15 @@
 @warning-color: #f67770; // 警告色
 @error-color: #f35248; // 错误色
 @like-color: #f01c1c; // 点赞色
+
+/* card-colors */
+@card-color-1: rgba(252,175,162,0.30);
+@card-color-2: rgba(255,227,148,0.30);
+@card-color-3: rgba(146,230,245,0.30);
+@card-color-4: rgba(168,237,138,0.31);
+@card-color-5: rgba(202,167,247,0.30);
+
+
 /* 中性色 */
 
 @gray-0: #282828;  // gray-1
